--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>BG-BIKERS GOAT ASSOCIATION</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,34 +21,25 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <header>
-  </header>
-
   <main>
-    <section class="image-section">
-      <img src="assets/images/logo.png" />
+
+    <section class="one-column">
+      <div class="center-text">
+        BG
+      </div>
+      <div class="image">
+      </div>
     </section>
-    <section class="text-section">
-      <p>Id adipisicing ipsum non exercitation ad est magna nulla. Do duis aliquip dolore dolore ad aliquip sit dolore exercitation eu. Proident commodo esse culpa ex laborum laborum culpa eu. Ea aliqua ad non voluptate aliqua id. Cupidatat cupidatat enim nostrud veniam in.
-        Ex fugiat ad occaecat do sit quis est quis eiusmod irure ad. Amet commodo culpa sint commodo pariatur in eiusmod sunt fugiat amet sint cillum commodo. Proident magna consectetur ea in tempor aliqua minim sunt deserunt ut ad occaecat.
-      </p>
+    <section class="two-columns">
+
+
+
     </section>
   </main>
 
-  <footer>
-  </footer>
 
 
 
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
