HTML UPDATE LAYOUT

--- a/index.html
+++ b/index.html
@@ -24,16 +24,25 @@
   <main>
 
     <section class="one-column">
-      <div class="center-text">
-        BG
-      </div>
-      <div class="image">
+      <div class="section-title">
+        <h1>BG</h1>
+        <caption></caption>
       </div>
     </section>
+
     <section class="two-columns">
 
+      <div class="first-column">
+        <div class="section-title">
 
+          <h1>BIG BOSS</h1>
 
+        </div>
+      </div>
+
+      <div class="second-column">
+        CREW
+      </div>
     </section>
   </main>
 
