--- a/index.html
+++ b/index.html
@@ -33,15 +33,18 @@
     <section class="two-columns">
 
       <div class="first-column">
-        <div class="section-title">
+        <div class="first-row">
+          <div class="section-title">
 
-          <h1>BIG BOSS</h1>
+            <h1>BIG BOSS</h1>
 
+          </div>
         </div>
       </div>
-
       <div class="second-column">
-        CREW
+        <div class="second-row">
+          CREW
+        </div>
       </div>
     </section>
   </main>
