--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <section class="two-columns">
-
+      <img src="images/psychogoat.png" alt="">
       <div class="first-column">
         <div class="first-row">
           <div class="section-title">
