--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+  <div class="cursor">
+  </div>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -31,7 +33,7 @@
     </section>
 
     <section class="two-columns">
-      <img src="images/psychogoat.png" alt="">
+      <img src="assets/images/psychogoat.png" alt="">
       <div class="first-column">
         <div class="first-row">
           <div class="section-title">
