--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="assets/icons/icon.png">
+  <link rel="cursor_img" href="assets/icons/patte.png">
+  <link href="cursor" rel="stylesheet">
+
+
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/styles.css">
@@ -17,39 +21,42 @@
 </head>
 
 <body>
-  <div class="cursor">
-  </div>
-  <!--[if IE]>
+  <span class="curseur_img">
+    <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <main>
+    <main>
 
-    <section class="one-column">
-      <div class="section-title">
-        <h1>BG</h1>
-        <caption></caption>
-      </div>
-    </section>
+      <section class="one-column">
 
-    <section class="two-columns">
-      <img src="assets/images/psychogoat.png" alt="">
-      <div class="first-column">
+        <div class="section-title">
+          <h1>BG</h1>
+          <caption></caption>
+        </div>
+      </section>
+
+      <section class="two-columns">
+        <img src="assets/images/psychogoat.png" alt="">
         <div class="first-row">
-          <div class="section-title">
+          <div class="first-column">
 
-            <h1>BIG BOSS</h1>
 
+            <div class="section-title">
+
+              <h1>BIG BOSS</h1>
+
+            </div>
           </div>
         </div>
-      </div>
-      <div class="second-column">
-        <div class="second-row">
-          CREW
+        <div class="second-column">
+
+          <div class="second-row">
+            <h1>CREW</h1>
+          </div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
 
 
