--- a/index.html
+++ b/index.html
@@ -37,24 +37,31 @@
       </section>
 
       <section class="two-columns">
-        <img src="assets/images/psychogoat.png" alt="">
-        <div class="first-row">
-          <div class="first-column">
 
+        <div class="center-content">
+          <h1>BIG BOSS</h1>
+        </div>
+        <div class="transparent"></div>
+        <div class="transparent"></div>
+        <div class="center-content">
+          <h1>The crew</h1>
+        </div>
 
+        <!--  <div class="first-column">
+          <div class="first-row">
             <div class="section-title">
-
               <h1>BIG BOSS</h1>
-
             </div>
           </div>
         </div>
-        <div class="second-column">
 
+        <div class="second-column">
           <div class="second-row">
+
             <h1>CREW</h1>
           </div>
         </div>
+      -->
       </section>
     </main>
 
