--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <div class="center-content">
           <h1>BIG BOSS</h1>
         </div>
-        <div class="transparent"></div>
+        <div class="transparent">
+        </div>
         <div class="transparent"></div>
         <div class="center-content">
           <h1>The crew</h1>
