--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="center-content">
           <h1>BIG BOSS</h1>
         </div>
-        <div class="transparent">
+        <div class="transparent"> <img src="assets/images/psychogoat.png" alt="goat">
         </div>
-        <div class="transparent"></div>
+        <div class="transparent"><img src="assets/images/psychogoat.png" alt="goat"></div>
         <div class="center-content">
           <h1>The crew</h1>
         </div>
